Closed
Bug 1053447
Opened 11 years ago
Closed 11 years ago
Re-enable background finalization of ProxyObjects
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla34
People
(Reporter: efaust, Assigned: efaust)
Details
Attachments
(1 file)
|
978 bytes,
patch
|
terrence
:
review+
Sylvestre
:
approval-mozilla-aurora+
lmandel
:
approval-mozilla-beta-
|
Details | Diff | Splinter Review |
As part of testing for a b2g blocker, I misguidedly landed a patch to disable background finalization of proxy objects. Let's undo that.
We've talked about this on IRC already, but I made a new bug and posted the patch formally, so we could get it uplifted as needed.
Attachment #8472596 -
Flags: review?(terrence)
Updated•11 years ago
|
Attachment #8472596 -
Flags: review?(terrence) → review+
| Assignee | ||
Comment 1•11 years ago
|
||
Comment 2•11 years ago
|
||
Assignee: nobody → efaustbmo
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
| Assignee | ||
Comment 3•11 years ago
|
||
Comment on attachment 8472596 [details] [diff] [review]
Patch
Approval Request Comment
[Feature/regressing bug #]: Testing in bug 1008791
[User impact if declined]: Some GC performance
[Describe test coverage new/current, TBPL]: landed comfortably on trunk
[Risks and why]: Little. This worked before, and we disabled it temporarily. We're just re-enabling and old feature.
[String/UUID change made/needed]: None
Attachment #8472596 -
Flags: approval-mozilla-beta?
Attachment #8472596 -
Flags: approval-mozilla-aurora?
Updated•11 years ago
|
Updated•11 years ago
|
Attachment #8472596 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 4•11 years ago
|
||
Comment 5•11 years ago
|
||
(In reply to Eric Faust [:efaust] from comment #0)
> Created attachment 8472596 [details] [diff] [review]
> Patch
>
> As part of testing for a b2g blocker, I misguidedly landed a patch to
> disable background finalization of proxy objects. Let's undo that.
>
> We've talked about this on IRC already, but I made a new bug and posted the
> patch formally, so we could get it uplifted as needed.
This feature was disabled on May 29, which means that 32 went through the entire Aurora and Beta cycles to this point with this disabled. Although a very small code change, is it worth the risk of reeabling this feature at this point and shipping something that was not tested by the prerelease user base during the 32 cycle?
Flags: needinfo?(efaustbmo)
| Assignee | ||
Comment 6•11 years ago
|
||
(In reply to Lawrence Mandel [:lmandel] from comment #5)
> (In reply to Eric Faust [:efaust] from comment #0)
> > Created attachment 8472596 [details] [diff] [review]
> > Patch
> >
> > As part of testing for a b2g blocker, I misguidedly landed a patch to
> > disable background finalization of proxy objects. Let's undo that.
> >
> > We've talked about this on IRC already, but I made a new bug and posted the
> > patch formally, so we could get it uplifted as needed.
>
> This feature was disabled on May 29, which means that 32 went through the
> entire Aurora and Beta cycles to this point with this disabled. Although a
> very small code change, is it worth the risk of reeabling this feature at
> this point and shipping something that was not tested by the prerelease user
> base during the 32 cycle?
The cost of not taking the patch is relatively low (some perf hit, but not even that much), and I agree that applying it may introduce new crashes (unlikely, but possible). If we feel like 32 is too close to release to take this, that makes sense. It's a thing that should bake for a bit under tests, because the crashes (in the worst case, if there were any) that it caused would be intermittent GC-related failures.
I am OK with shipping a release without this patch applied. It will not be a disaster.
Flags: needinfo?(efaustbmo)
Comment 7•11 years ago
|
||
Thanks Eric. Given the number of changes that are going in on beta, I'd like to play it safe in this case. I'm marking Firefox 32 as won't fix. This fix will be in Firefox 33.
Updated•11 years ago
|
Attachment #8472596 -
Flags: approval-mozilla-beta? → approval-mozilla-beta-
You need to log in
before you can comment on or make changes to this bug.
Description
•