Bug 1053447 - Re-enable background finalization of proxies. r=terrence, a=sledru